# dynamic linking references:
#     linking https://zicklag.github.io/rust-tutorials/rust-plugins.html
#     http://blog.pnkfx.org/blog/2022/05/12/linking-rust-crates/
#
#     set rustflags = ["-C","prefer-dynamic"] withing .cargo/config [build] section
#     export LD_LIBRARY_PATH=$(rustc --print=sysroot)/lib $MY_PROJECT/target/*
# ---------------------------------------------------------------------------------------

[package]
name = "afbv4"
version = "0.2.0"
authors = ["fulup@iot.bzh"]
publish = false
build = "capi/build.rs"
edition = "2021"
license.workspace = true

[dependencies]
bitflags = "2"

[build-dependencies]
system-deps = ">=7.0"
bindgen = ">=0.69"
cc = ">=1.0"

[features]
rpm_build = []

[package.metadata.system-deps]
libafb = "5"
json-c  = "*"

[lib]
name = "afbv4"
crate-type = ["lib"]
path = "src/@libafb-mod.rs"
