[package]
name = "libafb-samples"
version = "0.1.0"
authors = ["fulup@iot.bzh"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lib_libafb= {path ="../libafb"}

[lib]
# demo type crate
name = "demo_converter"
crate-type = ["lib"]
path = "converter/demo-converter.rs"

[[example]]
# main sample
name = "afb_demo"
crate-type = ["cdylib"]
path = "demo/demo-binding.rs"

[[example]]
# optional test use:  clear && cargo build --example afb_test
name = "afb_test"
crate-type = ["cdylib"]
path = "test/binding-test.rs"

[[example]]
# type converter benchmarck
name = "afb_bench"
crate-type = ["cdylib"]
path = "bench/binding-bench.rs"
